tests/baselines/reference/declareFileExportAssignmentWithVarFromVariableStatement.errors.txt
declareFileExportAssignmentWithVarFromVariableStatement.ts(18,10): error TS2454: Variable 'm2' is used before being assigned.


==== declareFileExportAssignmentWithVarFromVariableStatement.ts (1 errors) ====
    module m2 {
        export interface connectModule {
            (res, req, next): void;
        }
        export interface connectExport {
            use: (mod: connectModule) => connectExport;
            listen: (port: number) => void;
        }
    
    }
    
    var x = 10, m2: {
        (): m2.connectExport;
        test1: m2.connectModule;
        test2(): m2.connectModule;
    };
    
    export = m2;
             ~~
!!! error TS2454: Variable 'm2' is used before being assigned.